2004-08-20  Choe Hwanjin <krisna@kldp.org>
	* candidatetable.h: 심벌들의 순서를 윈도우즈와 동일하게 바꿈

2004-08-11  Choe Hwanjin <krisna@kldp.org>
	* Release 0.9.11

2004-08-09  Choe Hwanjin <krisna@kldp.org>
	* #300388 문제 해결

2004-07-21  Choe Hwanjin <krisna@kldp.org>
	* gtk_im_context_get_surrounding에서 널 포인터 체크
	* candidate 창에서 mouse wheel event 처리

2004-07-19  Choe Hwanjin <krisna@kldp.org>
	* 한자 선택창이 뜨면 마우스와 키보드를 grab 함

2004-07-18  Choe Hwanjin <krisna@kldp.org>
	* string commit하기 전에 preedit_changed 시그널을 발생시킴
	  evolution 1.5에서 편지 편집창에서 생기던 문제 해결(#300276 참고)

2004-07-12  Choe Hwanjin <krisna@kldp.org>
	* configure 할때 sysconfdir을 따로 지정하지 않아도 알아서 찾도록 함

2004-07-09  Choe Hwanjin <krisna@kldp.org>
	* toplevel 윈도우마다 한영 상태를 저장하도록 함

2004-06-28  Choe Hwanjin <krisna@kldp.org>
	* nabi의 candidate table로 부터 추출한 한자 데이터 사용
	* 컴파일시 기본 자판 설정 메뉴 추가: --with-default-keyboard=2/39/3f
	  옵션을 사용하여 configure 스크립트 실행시 설정 가능

2004-05-13  Choe Hwanjin <krisna@kldp.org>
	* Internationalization: 메뉴에서 한글로 보이게 함

2003-12-26  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c,hangulcandidate.h,hanjatable.h,chartable.h:
	  hanja_table과 char_table을 통합해서 candidata_table 하나로 만듦.
	  surrounding을 이용하는 루틴을 추가. hanjatable.h,chartable.h 파일은
	  삭제

2003-12-20  Choe Hwanjin <krisna@kldp.org>
	* release 0.9.9

2003-12-18  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: set_client_window 함수를 반복해서 호출할 경우에
	  대한 처리

2003-12-10  Choe Hwanjin <krisna@kldp.org>
	* gtkimcontexthangul.c: get_toplevel_window 함수를 다시 구현

2003-11-27  Choe Hwanjin  <krisna@people.kldp.org>
        * gtkimcontexthangul.c, gtkimcontexthangul.h:
          set_cursor_location method 구현,
	  candidate window를 커서 위치 근처에 표 현
        * gtkimcontexthangul.c: remove period in hanja candidate window
 
2003-11-23  Choe Hwanjin  <krisna@people.kldp.org>
        * NEWS, TODO: 문서 업데이트

2003-11-20  Choe Hwanjin  <krisna@people.kldp.org>
	* release 0.9.8
	* configure.in: version up to 0.9.8