@@ -1,3 +1,6 @@
+2004-08-26  Choe Hwanjin <krisna@kldp.org>
+	* gtkimcontexthangul.c: candidate window에서 한페이지에 9개 표시
+
 2004-08-20  Choe Hwanjin <krisna@kldp.org>
 	* candidatetable.h: 심벌들의 순서를 윈도우즈와 동일하게 바꿈
 
